keycloak/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:22.0.0
        args: ["start-dev","--cache-stack=kubernetes"]
        resources:
          requests:
            memory: "250Mi"
            cpu: "64m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /health/ready
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8082
    targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer

#---
#
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: keycloak-ingress
#  annotations:
#    konghq.com/strip-path: "true"
#  labels:
#    name: keycloak-ingress
#spec:
#  ingressClassName: kong
#  rules:
#  - host: keycloak.fvillanueva.pe
#    http:
#        paths:
#        - pathType: Prefix
#          path: "/"
#          backend:
#            service:
#              name: keycloak
#              port: 
#                number: 8080
